<resources>
    <string name="app_name">ShowDrink1</string>
    <string name="TextView_TelaMain_escreva">Write the name of a drink</string>
    <string name="loading">Loading…</string>
    <string name="logout">Exit</string>
    <string name="no_results">"no results found"</string>

    <string name="no_search_term">Enter a search term</string>

    <string name="no_network">check your connection</string>
    <string name="str_empty">" "</string>
    <string name="appwidget_text">Show a Drink</string>
    <string name="txt_search">Search a drink</string>
    <string name="tela_splash_texto">Show Me A Drink</string>
    <string name="add_widget">Add widget</string>
    <string name="app_widget_description">This is an app widget description</string>
    <string name="description_logo">App Logo</string>
    <string name="description_search">Search button</string>
    <string name="description_historic">Historic Button</string>
    <string name="how_to_prepare">How to prepare:</string>
    <string name="ingredients">Ingredients:</string>
    <string name="namedrink">Drink:</string>
    <string name="instructions">Instructions:</string>
    <string name="map">GPS</string>
    <string name="adddrink">Add a Drink!!</string>
    <string name="backtohome">Back to home</string>



</resources>